WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40348
[chromium] Menu key should act on current selection even if it is not editable
https://bugs.webkit.org/show_bug.cgi?id=40348
Summary
[chromium] Menu key should act on current selection even if it is not editable
Evan Stade
Reported
2010-06-08 21:01:12 PDT
In
r52124
, I reworked the menu key in a way that made it so that it only acted on selections in an editable node. A user pointed this out in <
http://crbug.com/45434
>. This reverts it to the old behavior. The rest of the issues that I fixed previously (see <
https://bugs.webkit.org/show_bug.cgi?id=32347
>) are unaffected.
Attachments
patch
(1.27 KB, patch)
2010-06-08 21:03 PDT
,
Evan Stade
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Evan Stade
Comment 1
2010-06-08 21:03:48 PDT
Created
attachment 58208
[details]
patch
Tony Chang
Comment 2
2010-06-08 22:34:27 PDT
Is it possible to test this with eventSender.keyDown or does it not know about this key? Can we add this key to the method?
Evan Stade
Comment 3
2010-06-09 11:22:01 PDT
we could test it with eventSender.keyDown, but I'm not sure how we'd verify that it's doing what we want from within a layout test. It's probably better suited to test via a chromium UI test.
Eric Seidel (no email)
Comment 4
2010-06-12 18:58:42 PDT
Comment on
attachment 58208
[details]
patch OK. rs=me.
WebKit Commit Bot
Comment 5
2010-06-12 19:09:54 PDT
Comment on
attachment 58208
[details]
patch Clearing flags on attachment: 58208 Committed
r61072
: <
http://trac.webkit.org/changeset/61072
>
WebKit Commit Bot
Comment 6
2010-06-12 19:10:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug