2010-06-12  Evan Stade  <estade@chromium.org>

Reviewed by Eric Seidel.

        [chromium] Menu key should act on current selection even if it is not editable
        https://bugs.webkit.org/show_bug.cgi?id=40348

        Allow the menu key to act on non-editable selections.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::sendContextMenuEvent):

Canonical link: https://commits.webkit.org/52085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61072 268f45cc-cd09-0410-ab3c-d52691b4dbfc